add_library(povbase STATIC
    colour.cpp
    fileinputoutput.cpp
    font/crystal.cpp
    font/cyrvetic.cpp
    font/povlogo.cpp
    font/timrom.cpp
    path.cpp
    pov_err.cpp
    povms.cpp
    povmscpp.cpp
    processoptions.cpp
    stringutilities.cpp
    textstream.cpp
    textstreambuffer.cpp
    timer.cpp
    image/bmp.cpp
    image/colourspace.cpp
    image/encoding.cpp
    image/gif.cpp
    image/gifdecod.cpp
    image/hdr.cpp
    image/iff.cpp
    image/image.cpp
    image/jpeg.cpp
    image/openexr.cpp
    image/pgm.cpp
    image/png.cpp
    image/ppm.cpp
    image/targa.cpp
    image/tiff.cpp
    animation/animation.cpp
    animation/moov.cpp
)
